--- a/app/views/home/nedir.html.erb
+++ b/app/views/home/nedir.html.erb
@@ -27,7 +27,7 @@
         <div class="nedir-item">
         <h3>2)	VAKIF veya DERNEK</h3>
         <p>BenVarım’da kullanıcı adınızı yaratın ve proje ile kampanyalarınızı kolayca internet ortamına taşıyın. Gönüllülerinizin sosyal ağlarına kolayca ulaşarak hızlıca bağış toplamaya başlayın.</p>
-        <p><%=link_to "Yeni Vakıf ve Dernek Kaydı", :new_organization, :class => "button super yellow button-primary no-margin"%>
+        <p><%=link_to "Yeni Vakıf ve Dernek Kaydı", :new_organization, :class => "button large green button-primary no-margin"%>
         </p>
         </div>
 
