--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,7 +28,7 @@
         <div class="profile-actions">
             <h4>Yönetim Paneli</h4>
             <ul>
-               <li><%= link_to "Bilgilerimi Düzenle", edit_user_path(current_user.id) %></li>
+               <li><%= link_to "Bilgilerimi Düzenle", edit_user_path(current_user) %></li>
                <li><%= link_to "Çıkış", destroy_user_session_path %></li>
             </ul>
             <br />
