footerdaki linki duzelttim. fixes #120

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -12,7 +12,7 @@
   <%=link_to "Kullanım Şartları", :kullanim_sartlari %> |
   <%=link_to "Güvenli Ödeme", :guvenli_odeme %> |
   <%=link_to "Hakkımızda", :hakkimizda %> |
-  <%=link_to "İletişim", :iletisim %>
+  <%=link_to "İletişim", :new_contact_form %>
 </div>
 </div>
 </div>
