--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,7 @@
           <h2><%= @user.name %></h2>
           <% if @user.birthday %>
           <div class="ro-details">
-             <p class="small"><%=", #{@user.age}"%></p>
+             <p class="small"><%="#{@user.age}"%></p>
           </div>
           <% end %>
         </div>
