kurum sayfasindaki isim linkleri profil yerine sayfaya gidiyor. fixes #127

--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -85,7 +85,7 @@
           <div class="row clearfix">
               <div class="bagis-miktari"><%=page.collected_str%> <span>TL</span></div>
               <blockquote><span>“</span><%=page.description%><%=link_to "...", page%></blockquote>
-              <div class="bagisci"><%=link_to page.user.name, page.user%></div>
+              <div class="bagisci"><%=link_to page.user.name, page%></div>
           </div><!-- end of .row -->
         <% end %>
 
