metin duzeltme fixes #130

--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -90,7 +90,7 @@
         <% end %>
 
         <div class="row row-action">
-          <%=link_to "Ben de bağış kampanyası düzenlemek istiyorum!", new_page_for_organization_path(@organization), :class => "green button large" %>
+          <%=link_to "Ben de bağış sayfası düzenlemek istiyorum!", new_page_for_organization_path(@organization), :class => "green button large" %>
         </div><!-- end of .row -->
 
 
