gizlilik politikasi guncellendi.

--- a/app/views/home/gizlilik_politikasi.html.erb
+++ b/app/views/home/gizlilik_politikasi.html.erb
@@ -2,12 +2,127 @@
   <div class="widget widget-light">
     <div class="w-inner">
       <div class="w-title">Gizlilik Politikası</div>
-       
 
-        <p>BenVarım, sosyal sorumluluk projeleri için bağış ve tanıtım platformudur.</p>
- 
+
+
+      <p class=MsoNormal><i style='mso-bidi-font-style:normal'><span lang=DE-AT
+      style='mso-ansi-language:DE-AT'>Son güncelleme tarihi: 10 Nisan 2011<o:p></o:p></span></i></p>
+
+      <p class=MsoNormal><b style='mso-bidi-font-weight:normal'><span lang=DE-AT
+      style='mso-ansi-language:DE-AT'>Gizlilik Politikası<o:p></o:p></span></b></p>
+
+      <p class=MsoNormal><span lang=DE-AT style='mso-ansi-language:DE-AT'>Benvarim.com
+      „Kullan</span><span lang=TR style='mso-ansi-language:TR'>ım &#350;artlarını” (</span><a
+      href="http://benvarim.com/kullanim_sartlari"><span lang=DE-AT style='mso-ansi-language:
+      DE-AT'>http://benvarim.com/kullanim_sartlari</span></a><span lang=DE-AT
+      style='mso-ansi-language:DE-AT'>) kabul ederek websitemizin a&#351;a&#287;ıda
+      açıklananan gizlilik politikasını kabul ediyorsunuz. E&#287;er gizlilik
+      politikasını kabul etmiyorsanız lütfen bu websitesini kullanmayınız. Bu
+      gizlilik politikasını kısmen veya tamamen de&#287;i&#351;tirme hakkımız saklı
+      olup, metn</span><span lang=TR style='mso-ansi-language:TR'>in güncel hali ve
+      güncellenme tarihi </span><span lang=DE-AT style='mso-ansi-language:DE-AT'>bu
+      sayfada yayınlanacaktır.<o:p></o:p></span></p>
+
+      <p class=MsoNormal><span lang=DE-AT style='mso-ansi-language:DE-AT'>Bu
+      websitesi, ba&#351;ka websitelerine ba&#287;lantılar içerebilir. Di&#287;er
+      websitelerinin gizlilik politikalarından ve uygulamalarından benvarim.com
+      sorumlu de&#287;ildir.<o:p></o:p></span></p>
+
+      <p class=MsoNormal><span lang=DE-AT style='mso-ansi-language:DE-AT'>Kullanıcı
+      olarak bizimle payla&#351;tı&#287;ınız ki&#351;isel ve kurumsal bilgilerinizde
+      de&#287;i&#351;iklik veya düzeltilmesi gereken noktalar veya politikamız
+      hakkında görü&#351; bildirmek veya ki&#351;isel ve kurumsal bilgilerinizi
+      de&#287;i&#351;tirmek isterseniz lütfen bizle ileti&#351;ime geçiniz.<o:p></o:p></span></p>
+
+      <p class=MsoNormal><b style='mso-bidi-font-weight:normal'><span lang=DE-AT
+      style='mso-ansi-language:DE-AT'>Kullanıcıdan Topladı&#287;ımız Bilgiler<o:p></o:p></span></b></p>
+
+      <p class=MsoNormal><span lang=DE-AT style='mso-ansi-language:DE-AT'>Benvarim.com
+      a&#351;a&#287;ıda belirtilen bilgileri toplayabilir, saklayabilir ve kullanabilir.<o:p></o:p></span></p>
+
+      <ul>
+        <li>Websitemizi ziyaretleriniz  ve kullanma biçiminiz ile ilgili bilgiler,
+      </li><li>Websitemizde gerçekleştirdiğiniz işlemler ile ilgili bilgiler: Gönüllü olduğunuz kurumlar, bağış yaptığınız kurumlar, ne kadar bağış yaptığınız vb.,
+      </li><li>Websitemize kayıt olurken bizimle paylaştığınız bilgileriniz,
+      </li><li>Websitemizin işlem ve hizmetlerden yararlanmak için bizimle paylaştığınız bilgileriniz,
+      </li><li>Hizmetlerimizden faydalanmasını istediğiniz kişi veya kurumlar hakkında bizimle paylaştığınız bilgiler,
+      </li><li>Bize sağladığınız her türlü diğer bilgi.</li>
+      </ul>
+
+
+
+
+      <p class=MsoNormal><span lang=DE-AT style='mso-ansi-language:DE-AT'>Benvarim.com,
+      kredi kartı, banka kartı veya internet bankacılık i&#351;lemleri kullanıcı adı,
+      &#351;ifreleri gibi bilgi toplamaz ve sisteminde kayıt tutmaz.<o:p></o:p></span></p>
+
+      <p class=MsoListParagraph style='text-indent:-.25in;mso-list:l0 level1 lfo3'><![if !supportLists]><span
+      lang=DE-AT style='font-family:Symbol;mso-fareast-font-family:Symbol;mso-bidi-font-family:
+      Symbol;mso-ansi-language:DE-AT'><span style='mso-list:Ignore'>·<span
+      style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span></span><![endif]><span
+      lang=DE-AT style='mso-ansi-language:DE-AT'>Yapılan her türlü bankacılık
+      i&#351;lemi, PayPal ve bankaların internet ödeme arayüzleri ile yapılmaktadır.
+      Bu arayüzlerin güvenli&#287;i benvarim.com dan ba&#287;ımsız, sıkı güvenlik
+      önlemleriyle denetlenen kurumlarla yapılmaktadır. <a name="_GoBack"></a><o:p></o:p></span></p>
+
+      <p class=MsoNormal><b style='mso-bidi-font-weight:normal'><span lang=DE-AT
+      style='mso-ansi-language:DE-AT'>Ki&#351;isel Bilgilerin Kullanılması<o:p></o:p></span></b></p>
+
+      <p class=MsoNormal><span lang=DE-AT style='mso-ansi-language:DE-AT'>Ki&#351;isel
+      bilgilerinizi üçüncü taraflar ile payla&#351;abilmemiz için sizin onayınız
+      gerekmektedir. Ancak mahkeme kararı ile benvarim.com’dan talep edilen bilgiler
+      sizin onayınız olmadan da payla&#351;ılabilir.<o:p></o:p></span></p>
+
+      <p class=MsoNormal><span lang=DE-AT style='mso-ansi-language:DE-AT'>Bizimle
+      payla&#351;tı&#287;ınız ki&#351;isel bilgileriniz gizlilik politikamızın veya
+      websitemizin belirtti&#287;i di&#287;er hususlar do&#287;rultusunda kullanılabilir.<o:p></o:p></span></p>
+
+
+
+      <ul>
+      <li>Websitemizin yönetilmesi ve idame ettirilmesi,
+      </li><li>Websitemizin ve hizmetlerinin daha etkin ve verimli kullanılması için kullanıcıya özgü değişiklikler yapılması,
+      </li><li>Websitemizde yapmış olduğunuz veya yapabileceğiniz işlemler hakkında tarafınıza bilgi verilmesi,
+      </li><li>Websitemizden istediğini email bildirimlerinin tarafınıza gönderilmesi,
+      </li><li>Benvarim.com veya ilgilenebileceğiniz diğer üçüncü tarafların yayınlamış olduğu bülten ve yayınların sizin de onayınız alınarak tarafınıza email veya başka bir yolla iletilmesi (Bu hizmetten yararlanmak istemediğinizde bizi bilgilendirmeniz yeterlidir),
+      </li><li>Websitemiz hakkında istatistiksel bilgilerin üçüncü taraflarla paylaşılması (Bu istatistiksel paylaşım yapılırken kullanıcıların kimliğinin belirlenmesine neden olacak her türlü bilgi saklanır),
+      </li><li>Websitesi veya kullanıcılar hakkında yapılan araştırmalar veya şikayetlere yönelik işlemler.</li>
+      </ul>
+
+
+
+
+
+
+      <p class=MsoNormal><b style='mso-bidi-font-weight:normal'>Bilgilerin
+      Güvenli&#287;inin Sa&#287;lanması<o:p></o:p></b></p>
+
+      <p class=MsoNormal>Benvarim.com ki&#351;isel bilgilerinizin kaybedilmesini,
+      yanlı&#351; kullanılmasını ve de&#287;i&#351;tirilmesini engellemeye yönelik
+      gerekli koruyucu tedbirleri alır. Bilgileriniz firewall ve &#351;ifre korumalı
+      serverlarımızda saklanır.<span style="mso-spacerun: yes">&nbsp;
+      </span>Websitemiz üzerinden yapılan elektronik i&#351;lemler SSL teknolojisi
+      ile kriptolanır. Websitemiz üzerinde kesinlikle banka ve kredi kartı bilgileri
+      saklanmaz.</p>
+
+      <p class=MsoNormal>Ancak belirtmek isteriz ki internet üzerinden yapılan data
+      transferleri hiçbir zaman %100 güvenli de&#287;ildir.<span style="mso-spacerun:
+      yes">&nbsp; </span>Benvarim.com ve çalı&#351;anları hiçbir zaman
+      kullanıcılarından &#351;ifreleri hakkında geri bilgi istemez. Kullanıcı adı,
+      &#351;ifresi ve kredi kartı bilgilerini gizli tutmak kullanıcıların
+      sorumlulu&#287;udur. </p>
+
+      <p class=MsoNormal><b style='mso-bidi-font-weight:normal'>&#304;leti&#351;im<o:p></o:p></b></p>
+
+      <p class=MsoNormal>E&#287;er gizlilik politikamız veya ki&#351;isel veya
+      kurumsal bilgilerinizin kullanılması do&#287;rultusunda merak ettikleriniz
+      varsa lütfen <a href="mailto:iletisim@benvarim.com">iletisim@benvarim.com</a> adresinden
+      bizimle ileti&#351;ime geçiniz veya ileti&#351;im formunu (<a
+      href="http://benvarim.com/iletisim/yeni">http://benvarim.com/iletisim/yeni</a>
+      ) doldurunuz.</p>
+
       </div>
-    </div> 
+    </div>
 </div><!-- end of #main-content -->
 
 <%= render 'layouts/sidebar'%>
