kurum kayit formu duzeltildi.

--- a/app/views/home/gizlilik_politikasi.html.erb
+++ b/app/views/home/gizlilik_politikasi.html.erb
@@ -5,11 +5,10 @@
 
 
 
-      <p class=MsoNormal><i style='mso-bidi-font-style:normal'><span lang=DE-AT
-      style='mso-ansi-language:DE-AT'>Son güncelleme tarihi: 10 Nisan 2011<o:p></o:p></span></i></p>
+      <p class=MsoNormal><i>Son güncelleme tarihi: 10 Nisan 2011</i></p>
 
       <p class=MsoNormal><b style='mso-bidi-font-weight:normal'><span lang=DE-AT
-      style='mso-ansi-language:DE-AT'>Gizlilik Politikası<o:p></o:p></span></b></p>
+      style='mso-ansi-language:DE-AT'>Gizlilik Politikası</span></b></p>
 
       <p class=MsoNormal><span lang=DE-AT style='mso-ansi-language:DE-AT'>Benvarim.com
       „Kullan</span><span lang=TR style='mso-ansi-language:TR'>ım &#350;artlarını” (</span><a
@@ -21,24 +20,24 @@
       gizlilik politikasını kısmen veya tamamen de&#287;i&#351;tirme hakkımız saklı
       olup, metn</span><span lang=TR style='mso-ansi-language:TR'>in güncel hali ve
       güncellenme tarihi </span><span lang=DE-AT style='mso-ansi-language:DE-AT'>bu
-      sayfada yayınlanacaktır.<o:p></o:p></span></p>
+      sayfada yayınlanacaktır.</span></p>
 
       <p class=MsoNormal><span lang=DE-AT style='mso-ansi-language:DE-AT'>Bu
       websitesi, ba&#351;ka websitelerine ba&#287;lantılar içerebilir. Di&#287;er
       websitelerinin gizlilik politikalarından ve uygulamalarından benvarim.com
-      sorumlu de&#287;ildir.<o:p></o:p></span></p>
+      sorumlu de&#287;ildir.</span></p>
 
       <p class=MsoNormal><span lang=DE-AT style='mso-ansi-language:DE-AT'>Kullanıcı
       olarak bizimle payla&#351;tı&#287;ınız ki&#351;isel ve kurumsal bilgilerinizde
       de&#287;i&#351;iklik veya düzeltilmesi gereken noktalar veya politikamız
       hakkında görü&#351; bildirmek veya ki&#351;isel ve kurumsal bilgilerinizi
-      de&#287;i&#351;tirmek isterseniz lütfen bizle ileti&#351;ime geçiniz.<o:p></o:p></span></p>
+      de&#287;i&#351;tirmek isterseniz lütfen bizle ileti&#351;ime geçiniz.</span></p>
 
       <p class=MsoNormal><b style='mso-bidi-font-weight:normal'><span lang=DE-AT
-      style='mso-ansi-language:DE-AT'>Kullanıcıdan Topladı&#287;ımız Bilgiler<o:p></o:p></span></b></p>
+      style='mso-ansi-language:DE-AT'>Kullanıcıdan Topladı&#287;ımız Bilgiler</span></b></p>
 
       <p class=MsoNormal><span lang=DE-AT style='mso-ansi-language:DE-AT'>Benvarim.com
-      a&#351;a&#287;ıda belirtilen bilgileri toplayabilir, saklayabilir ve kullanabilir.<o:p></o:p></span></p>
+      a&#351;a&#287;ıda belirtilen bilgileri toplayabilir, saklayabilir ve kullanabilir.</span></p>
 
       <ul>
         <li>Websitemizi ziyaretleriniz  ve kullanma biçiminiz ile ilgili bilgiler,
@@ -54,7 +53,7 @@
 
       <p class=MsoNormal><span lang=DE-AT style='mso-ansi-language:DE-AT'>Benvarim.com,
       kredi kartı, banka kartı veya internet bankacılık i&#351;lemleri kullanıcı adı,
-      &#351;ifreleri gibi bilgi toplamaz ve sisteminde kayıt tutmaz.<o:p></o:p></span></p>
+      &#351;ifreleri gibi bilgi toplamaz ve sisteminde kayıt tutmaz.</span></p>
 
       <p class=MsoListParagraph style='text-indent:-.25in;mso-list:l0 level1 lfo3'><![if !supportLists]><span
       lang=DE-AT style='font-family:Symbol;mso-fareast-font-family:Symbol;mso-bidi-font-family:
@@ -63,19 +62,19 @@
       lang=DE-AT style='mso-ansi-language:DE-AT'>Yapılan her türlü bankacılık
       i&#351;lemi, PayPal ve bankaların internet ödeme arayüzleri ile yapılmaktadır.
       Bu arayüzlerin güvenli&#287;i benvarim.com dan ba&#287;ımsız, sıkı güvenlik
-      önlemleriyle denetlenen kurumlarla yapılmaktadır. <a name="_GoBack"></a><o:p></o:p></span></p>
+      önlemleriyle denetlenen kurumlarla yapılmaktadır. <a name="_GoBack"></a></span></p>
 
       <p class=MsoNormal><b style='mso-bidi-font-weight:normal'><span lang=DE-AT
-      style='mso-ansi-language:DE-AT'>Ki&#351;isel Bilgilerin Kullanılması<o:p></o:p></span></b></p>
+      style='mso-ansi-language:DE-AT'>Ki&#351;isel Bilgilerin Kullanılması</span></b></p>
 
       <p class=MsoNormal><span lang=DE-AT style='mso-ansi-language:DE-AT'>Ki&#351;isel
       bilgilerinizi üçüncü taraflar ile payla&#351;abilmemiz için sizin onayınız
       gerekmektedir. Ancak mahkeme kararı ile benvarim.com’dan talep edilen bilgiler
-      sizin onayınız olmadan da payla&#351;ılabilir.<o:p></o:p></span></p>
+      sizin onayınız olmadan da payla&#351;ılabilir.</span></p>
 
       <p class=MsoNormal><span lang=DE-AT style='mso-ansi-language:DE-AT'>Bizimle
       payla&#351;tı&#287;ınız ki&#351;isel bilgileriniz gizlilik politikamızın veya
-      websitemizin belirtti&#287;i di&#287;er hususlar do&#287;rultusunda kullanılabilir.<o:p></o:p></span></p>
+      websitemizin belirtti&#287;i di&#287;er hususlar do&#287;rultusunda kullanılabilir.</span></p>
 
 
 
@@ -95,7 +94,7 @@
 
 
       <p class=MsoNormal><b style='mso-bidi-font-weight:normal'>Bilgilerin
-      Güvenli&#287;inin Sa&#287;lanması<o:p></o:p></b></p>
+      Güvenli&#287;inin Sa&#287;lanması</b></p>
 
       <p class=MsoNormal>Benvarim.com ki&#351;isel bilgilerinizin kaybedilmesini,
       yanlı&#351; kullanılmasını ve de&#287;i&#351;tirilmesini engellemeye yönelik
@@ -112,7 +111,7 @@
       &#351;ifresi ve kredi kartı bilgilerini gizli tutmak kullanıcıların
       sorumlulu&#287;udur. </p>
 
-      <p class=MsoNormal><b style='mso-bidi-font-weight:normal'>&#304;leti&#351;im<o:p></o:p></b></p>
+      <p class=MsoNormal><b style='mso-bidi-font-weight:normal'>&#304;leti&#351;im</b></p>
 
       <p class=MsoNormal>E&#287;er gizlilik politikamız veya ki&#351;isel veya
       kurumsal bilgilerinizin kullanılması do&#287;rultusunda merak ettikleriniz
