--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -44,6 +44,9 @@
           <%= f.label :description %>
           <%= f.text_area :description_html, :class => "mceEditor text-area" %>
         </div>
+
+        <br/>
+        <h3>İlgili kişi</h3>
         <div class="field">
           <%= f.label :contact_name %>
           <%= f.text_field :contact_name, :class=> "text-field" %>
