--- a/app/views/home/gizlilik_politikasi.html.erb
+++ b/app/views/home/gizlilik_politikasi.html.erb
@@ -117,7 +117,7 @@
       kurumsal bilgilerinizin kullanılması do&#287;rultusunda merak ettikleriniz
       varsa lütfen <a href="mailto:iletisim@benvarim.com">iletisim@benvarim.com</a> adresinden
       bizimle ileti&#351;ime geçiniz veya ileti&#351;im formunu (<a
-      href="http://benvarim.com/iletisim/yeni">http://benvarim.com/iletisim/yeni</a>
+      href="http://benvarim.com/iletisim">http://benvarim.com/iletisim</a>
       ) doldurunuz.</p>
 
       </div>
